# QtSignalToCSharpEvent

./: README.md
ManagedTest/: ManagedTest.csproj  Program.cs
ManagedTest/Properties/: AssemblyInfo.cs
managedcpp/: CMakeLists.txt
managedcpp/managedcpp/: AssemblyInfo.cpp  CMakeLists.txt  ManagedCppQt.cpp  ManagedCppQt.h  SignalProxy.cpp  SignalProxy.h  conversion.h
managedcpp/pureqt/: CMakeLists.txt  PureQt.cpp  PureQt.h  PureQt_global.h
